--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
+    "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-calendars": "^1.1300.0",
+    "react-native-image-picker": "^5.6.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
